--- a/src/Sunstone.Api/Sunstone.Api.csproj
+++ b/src/Sunstone.Api/Sunstone.Api.csproj
@@ -10,8 +10,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.10" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Sunstone.Application\Sunstone.Application.csproj" />
+    <ProjectReference Include="..\Sunstone.Infra\Sunstone.Infra.csproj" />
   </ItemGroup>
 
 </Project>
