--- a/src/Sunstone.Application/Sunstone.Application.csproj
+++ b/src/Sunstone.Application/Sunstone.Application.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="UseCases\" />
+    <None Remove="UseCases\GetGemstoneListUseCase\GetGemstoneUseCase.cs~RFe2a54f1.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Sunstone.Domain\Sunstone.Domain.csproj" />
   </ItemGroup>
 
 </Project>
