--- a/src/Sunstone.Infra/Sunstone.Infra.csproj
+++ b/src/Sunstone.Infra/Sunstone.Infra.csproj
@@ -7,8 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
+    <None Remove="Repositories\Repository.cs~RFe3f28f9.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Sunstone.Domain\Sunstone.Domain.csproj" />
   </ItemGroup>
 
 </Project>
